--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,3 +214,19 @@ body{
 .recensioni h2:focus-visible {
   outline: none !important;
 }
+
+/* Animazione hamburger → X */
+.mobile-menu-btn.active .hamburger-line:nth-child(1){
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.mobile-menu-btn.active .hamburger-line:nth-child(2){
+  opacity: 0;
+}
+.mobile-menu-btn.active .hamburger-line:nth-child(3){
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+/* blocca scroll sotto al menu aperto */
+body.no-scroll {
+  overflow: hidden;
+}
